force-app/main/default/objects/Sales_Relationship__c/Sales_Relationship__c.object-meta.xml
<CustomObject>
    <label>SAP Accounting Info</label>
    <nameField>
        <label>Nombre Organizaciones</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Accounting Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>