force-app/main/default/objects/Sales_Relationship__c/fields/Account_Org__c.field-meta.xml
<CustomField>
    <fullName>Account_Org__c</fullName>
    <label>Account Org</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Organizaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>