force-app/main/default/objects/Sales_Relationship__c/fields/B2BEnabled__c.field-meta.xml
<CustomField>
    <fullName>B2BEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Enabled</label>
    <type>Checkbox</type>
</CustomField>