force-app/main/default/objects/Sales_Relationship__c/fields/Bzirk__c.field-meta.xml
<CustomField>
    <fullName>Bzirk__c</fullName>
    <description>Sales area of the customer in SAP (BZIRK). In France is related to the price list applied.</description>
    <label>Sales Area</label>
    <length>6</length>
    <type>Text</type>
</CustomField>