force-app/main/default/objects/Sales_Relationship__c/fields/BzirkName__c.field-meta.xml
<CustomField>
    <fullName>BzirkName__c</fullName>
    <description>Description of the sales area (updated from SAP)</description>
    <label>Sales Area Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>