force-app/main/default/objects/Sales_Relationship__c/fields/Commercial__c.field-meta.xml
<CustomField>
    <fullName>Commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>User doesn&apos;t have SAP Password</errorMessage>
        <filterItems>
            <field>$User.SAP_Pass__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Organizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>