force-app/main/default/objects/Sales_Relationship__c/fields/Commission_Agent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>