force-app/main/default/objects/Sales_Relationship__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <defaultValue>&quot;GBP&quot;</defaultValue>
    <description>IF( 
ISPICKVAL($User.Default_Sales_Organization__c,&quot;203&quot;), &quot;EUR&quot;, 
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;206&quot;), &quot;EUR&quot;, 
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;207&quot;), &quot;EUR&quot;, 
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;208&quot;), &quot;EUR&quot;, 
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;210&quot;), &quot;EUR&quot;, 
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;218&quot;),&quot;EUR&quot;, 
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;602&quot;),&quot;USD&quot;,
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;603&quot;),&quot;USD&quot;,
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;604&quot;),&quot;USD&quot;,
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;605&quot;),&quot;USD&quot;,
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;606&quot;),&quot;USD&quot;,
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;608&quot;),&quot;USD&quot;,
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;615&quot;),&quot;USD&quot;,
IF( ISPICKVAL($User.Default_Sales_Organization__c, &quot;650&quot;),&quot;CAD&quot;,
&quot;GBP&quot;))))))))))))))</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
                <default>true</default>
                <label>GBP</label>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>DOP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>