force-app/main/default/objects/Sales_Relationship__c/fields/Custom_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Id__c</fullName>
    <description>id_de_sap del account + org. ventas + canal (revisar)</description>
    <externalId>true</externalId>
    <inlineHelpText>SAP ID, PK of 3 grouped values: Customer Sap ID + Sales Organization + Distribution Channel</inlineHelpText>
    <label>Custom Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>