force-app/main/default/objects/Sales_Relationship__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When disabled, the Sales Rel is deprecated (due to a fusion or another issue)</description>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>