force-app/main/default/objects/Sales_Relationship__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it Locked this RelationShip? It&apos;s independent from the Is Locked field in Account. Set by SAP System.</description>
    <inlineHelpText>Is it Locked this RelationShip? It&apos;s independent from the Is Locked field in Account. Set by SAP System.</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>