force-app/main/default/objects/Sales_Relationship__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <formula>IF( Is_Locked__c = FALSE, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;,20,20), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;rojo&quot;,20,20))</formula>
    <label>Locked</label>
    <type>Text</type>
</CustomField>