force-app/main/default/objects/Sales_Relationship__c/fields/Reason_of_creation__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_creation__c</fullName>
    <label>Reason of creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Account Owner</fullName>
            </value>
            <value>
                <fullName>New Account</fullName>
            </value>
            <value>
                <fullName>New Account Team Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>