force-app/main/default/objects/Sales_Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Tipo de relación</description>
    <inlineHelpText>Relationship</inlineHelpText>
    <label>Tipo de relación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z0</fullName>
                <label>Grupo</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Asociada</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Vinculada</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <default>true</default>
                <label>Terceros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>