force-app/main/default/objects/Sales_Relationship__c/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <description>Tienda</description>
    <inlineHelpText>Sales Office</inlineHelpText>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_office2</valueSetName>
    </valueSet>
</CustomField>