force-app/main/default/objects/Sales_Relationship__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Organización de ventas</description>
    <inlineHelpText>Sales Org</inlineHelpText>
    <label>Sales Org</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>