force-app/main/default/objects/Sales_Relationship__c/fields/SalesAreaPricebook__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaPricebook__c</fullName>
    <description>Define que Pricebook tiene un Sales Area determinado</description>
    <label>Sales Area (Price List)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>