force-app/main/default/objects/Sales_Relationship__c/fields/SAP_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Id__c</fullName>
    <formula>Account_Org__r.SAP_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Id</label>
    <type>Text</type>
</CustomField>