force-app/main/default/objects/Sales_Relationship__c/recordTypes/For_Creation.recordType-meta.xml
<RecordType>
    <fullName>For_Creation</fullName>
    <active>true</active>
    <description>RecordType utilizado únicamente en la creación del registro</description>
    <label>For Creation</label>
</RecordType>