force-app/main/default/objects/Sales_Relationship__c/recordTypes/For_Edition.recordType-meta.xml
<RecordType>
    <fullName>For_Edition</fullName>
    <active>true</active>
    <description>Tipo de Registro para Editar registros</description>
    <label>For Edition</label>
</RecordType>