force-app/main/default/objects/Sales_Relationship__c/validationRules/Account_locked_or_delete.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_locked_or_delete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),CONTAINS($User.Username, &apos;loads.user&apos;) = false, 
    OR( 
    Account_Org__r.Is_Locked__c  = True, 
    Account_Org__r.Is_Deleted__c   = True) 
)</errorConditionFormula>
    <errorMessage>Can&apos;t create new sales relationships because the account is deleted or locked.</errorMessage>
</ValidationRule>