force-app/main/default/objects/Sales_Relationship__c/validationRules/Check_User_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_User_Sales_Org</fullName>
    <active>false</active>
    <description>Checks whether the sales org is assigned to the user</description>
    <errorConditionFormula>NOT CONTAINS($User.SalesOrg_Text__c, TEXT(Sales_Org__c))</errorConditionFormula>
    <errorDisplayField>Sales_Org__c</errorDisplayField>
    <errorMessage>You are not assigned to the selected Sales Org. Please choose another one.</errorMessage>
</ValidationRule>