force-app/main/default/objects/Sales_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Org__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Org__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>Sap_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>